--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 					<img src="./webpage_files/MicrosoftLogo.png">
 				</center>
 				<div class="row">
-					<p>We present the General Language Understanding Evaluation benchmark for CODE, called CodeXGLUE, which includes a collection of code intelligence tasks  and a platform for model evaluation and comparison.
+					<p>
+					CodeXGLUE stands for General Language Understanding Evaluation benchmark for CODE. It includes 14 datasets for 10 diversified programming language tasks covering code-code (clone detection, defect detection, cloze test, code completion, code refinement, and code-to-code translation), text-code (natural language code search, text-to-code generation), code-text (code summarization) and text-text (documentation translation) scenarios. We provide three baseline models to support these tasks, including BERT-style pre-trained model (i.e. <a href="https://github.com/microsoft/CodeBERT">CodeBERT</a>) which is good at understanding problems, GPT-style pre-trained model which we call CodeGPT to support completion and generation problems, and Encoder-Decoder framework that supports sequence-to-sequence generation problems.
 					</p>
-					<p>CodeXGLUE covers 13 datasets for 11 code intelligence tasks, including code completion, code clone detection, code translation, code defect detection, code refinement, cloze test of source code, code search, text-to-code generation, code summarization, code change summarization, and documentation translation. We provide baseline models for each task, most of which are based on large pre-trained models like CodeBERT. </p>
 				</div>
 				<div class="row">
 					<h2>Terms and Conditions</h2>
