--- a/index.html
+++ b/index.html
@@ -173,34 +173,55 @@
 					<div class="table-responsive">
 					<br>
 					<br>
-						<h2>Leaderboard-CodeCompletion-line</h2>
+						<h2>Leaderboard-CodeCompletion</h2>
 						<div style="text-align:center">
-							<table class="table table-striped" id="codexgluetable" width="2000px"  cellspacing="50px" height="100px" cellpadding="100px">
-							<thead>
+							<!-- <table class="table table-striped" id="codexgluetable" width="2000px"  cellspacing="50px" height="100px" cellpadding="100px"> -->
+							<table class="table table-striped" id="codexgluetable">
+								<thead>
 								<tr>
-									<th width="30%"class="col-md-1">Rank</th>
-									<th class="col-md-1">Model</th>
-									<th class="col-md-1">Organization</th>
-									<th class="col-md-1">Submission Date</th>
-									<th class="col-md-1">CodeCompletion-line-py150-EM</th>
-									<th class="col-md-1">CodeCompletion-line-py150-Edit similarity</th>
-									<th class="col-md-1">CodeCompletion-line-java-EM</th>
-									<th class="col-md-1">CodeCompletionline-java-Edit similarity</th>
+									<th rowspan="2" valign="middle" >Rank</th>
+									<th rowspan="2" valign="middle">Model</th>
+									<th rowspan="2" valign="middle">Organization</th>
+									<th rowspan="2" valign="middle">Submission Date</th>
+									<th colspan="4" valign="middle" width="2000px">CodeCompletion-line</th>
+									<th colspan="2" valign="middle" width="1000px">CodeCompletion-token</th>
+								</tr>
+								<tr>
+									<th >py150-EM</th>
+									<th >py150-ES</th>
+									<th >java-EM</th>
+									<th >java-ES</th>
+									<th >py150-Acc</th>
+									<th >java-Acc</th>
 								</tr>
 							</thead>
 							<tbody>
+										<tr>
+											<td>1</td>
+											<td>Transformer w/ CodeGPT(12L)</td>
+											<td>CodeXGLUE Team</td>
+											<td>2020-06-19</td>
+											<td>39.37</td>
+											<td>70.02</td>
+											<td>25.30</td>
+											<td>61.54</td>
+											<td>75.19</td>
+											<td>76.45</td>
+									</tr>
 									<tr>
-										<td>1</td>
-										<td>Transformer w/GPT-2(12L)</td>
+										<td>2</td>
+										<td>Transformer w/ GPT-2(12L)</td>
 										<td>CodeXGLUE Team</td>
 										<td>2020-06-19</td>
 										<td>38.96</td>
 										<td>69.29</td>
 										<td>24.30</td>
 										<td>60.70</td>
+										<td>74.61</td>
+										<td>74.89</td>
 								  </tr>
 									<tr>
-										<td>2</td>
+										<td>3</td>
 										<td>Transformer (12L)</td>
 										<td>CodeXGLUE Team</td>
 										<td>2020-06-19</td>
@@ -208,7 +229,21 @@
 										<td>67.66</td>
 										<td>15.33</td>
 										<td>50.39</td>
+										<td>73.46</td>
+										<td>64.16</td>
 								  </tr>
+								  <tr>
+									  <td>4</td>
+									  <td>BPE+LSTM</td>
+									  <td>CodeXGLUE Team</td>
+									  <td>2020-06-19</td>
+									  <td>17.93</td>
+									  <td>50.05</td>
+									  <td>10.30</td>
+									  <td>41.55</td>
+									  <td>-</td>
+									  <td>56.02</td>
+								</tr>
 							</tbody>
 						</table>
 						</div>
