--- a/index.html
+++ b/index.html
@@ -196,11 +196,23 @@
 								</tr>
 							</thead>
 							<tbody>
-										<tr>
+									<tr>
 											<td>1</td>
+											<td>Model-1</td>
+											<td>Participant-1</td>
+											<td>2020-09-08</td>
+											<td>None</td>
+											<td>None</td>
+											<td>25.30</td>
+											<td>61.54</td>
+											<td>None</td>
+											<td>None</td>
+									</tr>
+									<tr>
+											<td>2</td>
 											<td>Transformer w/ CodeGPT(12L)</td>
 											<td>CodeXGLUE Team</td>
-											<td>2020-06-19</td>
+											<td>2020-08-30</td>
 											<td>39.37</td>
 											<td>70.02</td>
 											<td>25.30</td>
@@ -209,10 +221,10 @@
 											<td>76.45</td>
 									</tr>
 									<tr>
-										<td>2</td>
+										<td>3</td>
 										<td>Transformer w/ GPT-2(12L)</td>
 										<td>CodeXGLUE Team</td>
-										<td>2020-06-19</td>
+										<td>2020-08-30</td>
 										<td>38.96</td>
 										<td>69.29</td>
 										<td>24.30</td>
@@ -221,10 +233,10 @@
 										<td>74.89</td>
 								  </tr>
 									<tr>
-										<td>3</td>
+										<td>4</td>
 										<td>Transformer (12L)</td>
 										<td>CodeXGLUE Team</td>
-										<td>2020-06-19</td>
+										<td>2020-08-30</td>
 										<td>36.80</td>
 										<td>67.66</td>
 										<td>15.33</td>
@@ -233,15 +245,15 @@
 										<td>64.16</td>
 								  </tr>
 								  <tr>
-									  <td>4</td>
-									  <td>BPE+LSTM</td>
+									  <td>5</td>
+									  <td>LSTM</td>
 									  <td>CodeXGLUE Team</td>
-									  <td>2020-06-19</td>
+									  <td>2020-08-30</td>
 									  <td>17.93</td>
 									  <td>50.05</td>
 									  <td>10.30</td>
 									  <td>41.55</td>
-									  <td>-</td>
+									  <td>58.00</td>
 									  <td>56.02</td>
 								</tr>
 							</tbody>
