--- a/index.html
+++ b/index.html
@@ -152,15 +152,15 @@
 			<div class="container">
 				<div class="row">
 					<div class="table-responsive">
-						<h2>Leaderboard-CloneCompletion</h2>
-							<table id="LB-CloneCompletion" lay-filter="test"></table>
+						<h2>Leaderboard-CodeCompletion</h2>
+							<table id="LB-CodeCompletion" lay-filter="test"></table>
 							<script>
 								layui.use('table', function(){
 									var myTable = layui.table;
 	
 									//第一个实例
 									myTable.render({
-										elem: '#LB-CloneCompletion'
+										elem: '#LB-CodeCompletion'
 										,height: 312
 										,url: 'webpage_files/participants/code_completion.json' //数据接口
 										,page:  false//开启分页
