remove word color

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="table-responsive">
-					<h2><font color="red">Code2Code</font>-Clone Detection</h2>
+					<h2>Clone Detection (Code-Code)</h2>
 						<table id="LB-CloneDetection" lay-filter="test"></table>
 						<script>
 							layui.use('table', function(){
@@ -193,7 +193,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="table-responsive">
-					<h2><font color="red">Code2Code</font>-Defect Detection</h2>
+					<h2>Defect Detection (Code-Code)</h2>
 						<table id="LB-DefectDetection" lay-filter="test"></table>
 						<script>
 							layui.use('table', function(){
@@ -224,7 +224,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="table-responsive">
-					<h2><font color="red">Code2Code</font>-Cloze Test</h2>
+					<h2>Cloze Test (Code-Code)</h2>
 						<table id="LB-ClozeTest" lay-filter="test"></table>
 						<script>
 							layui.use('table', function(){
@@ -271,7 +271,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="table-responsive">
-					<h2><font color="red">Code2Code</font>-Code Completion</h2>
+					<h2>Code Completion (Code-Code)</h2>
 						<table id="LB-CodeCompletion" lay-filter="test"></table>
 						<script>
 							layui.use('table', function(){
@@ -309,7 +309,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="table-responsive">
-					<h2><font color="red">Code2Code</font>-Code Refinement</h2>
+					<h2>Code Refinement (Code-Code)</h2>
 						<table id="LB-CodeRefinement" lay-filter="test"></table>
 						<script>
 							layui.use('table', function(){
@@ -349,7 +349,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="table-responsive">
-					<h2><font color="red">Code2Code</font>-Code Translation</h2>
+					<h2>Code Translation (Code-Code)</h2>
 						<table id="LB-Code2CodeTranslation" lay-filter="test"></table>
 						<script>
 							layui.use('table', function(){
@@ -389,7 +389,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="table-responsive">
-					<h2><font color="blue">Text2Code</font>-Natural Language Code Search</h2>
+					<h2>Natural Language Code Search (Text-Code)</h2>
 						<table id="LB-NL-code-search" lay-filter="test"></table>
 						<script>
 							layui.use('table', function(){
@@ -426,7 +426,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="table-responsive">
-					<h2><font color="blue">Text2Code</font>-Code Generation</h2>
+					<h2>Code Generation (Text-Code)</h2>
 						<table id="LB-Text2CodeGeneration" lay-filter="test"></table>
 						<script>
 							layui.use('table', function(){
@@ -465,7 +465,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="table-responsive">
-					<h2><font color="green">Code2Text</font>-Code Summarization</h2>
+					<h2>Code Summarization (Code-Text)</h2>
 						<table id="LB-Code2TextGeneration" lay-filter="test"></table>
 						<script>
 							layui.use('table', function(){
@@ -501,7 +501,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="table-responsive">
-					<h2><font color="orange">Text2Text</font>-Documentation Translation</h2>
+					<h2>Documentation Translation (Text-Text)</h2>
 						<table id="LB-Text2TextGeneration" lay-filter="test"></table>
 						<script>
 							layui.use('table', function(){
