--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
 										,url: 'webpage_files/participants/overall.json' //数据接口
 										,page:  false//开启分页
 										,cols: [[{align: 'center', title: '', colspan: 4}
-											,{align: 'center', title: 'Code2Code', colspan: 6}
-											,{align: 'center', title: 'Text2Code', colspan: 2}
-											,{align: 'center', title: 'Code2Text', colspan: 1, colGroup:true}
-											,{align: 'center', title: 'Text2Text', colspan: 1, colGroup:true}
+											,{align: 'center', title: 'Code-Code', colspan: 6}
+											,{align: 'center', title: 'Text-Code', colspan: 2}
+											,{align: 'center', title: 'Code-Text', colspan: 1, colGroup:true}
+											,{align: 'center', title: 'Text-Text', colspan: 1, colGroup:true}
 											,{align: 'center', title: '', colspan: 1, colGroup:true}],
 											[ //表头
 											{field: 'Rank', title: 'Rank', align: 'right', width: 70}
