--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 						<ol style="margin-left: 30px;">
 							<li>1. Generate your prediction output for the dev set.</li>
 							<li>2. Run the official evaluation methodologies found in the task specific git repo and verify your systems are running as expected.</li>
-							<li>3. Generate your prediction output for the test set and submit the following information by </script><a href="codexglue@microsoft.com">emailing us</a>.</li>
+							<li>3. Generate your prediction output for the test set and submit the following information by <script type="text/javascript">gen_mail_to_link('codexglue','microsoft.com','CodeXGLUE Feedback','email us');</script>.</li>
 						</ol>
 						<p>Your email should include:</p>
 						<ol style="margin-left: 30px;">
