fix submisstion bug

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 							<a class="nav-link js-scroll-trigger" href="https://microsoft.github.io/CodeXGLUE/#leaderboard">Leaderboard</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link js-scroll-trigger" href="https://microsoft.github.io/CodeXGLUE/#contact">Contact</a>
+							<a class="nav-link js-scroll-trigger" href="https://microsoft.github.io/CodeXGLUE/#submission">Submission</a>
 						</li>
 					</ul>
 				</div>
@@ -541,7 +541,7 @@
 	
 
 		</section>
-		<section id="contact" class="bg-light">
+		<section id="submission" class="bg-light">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 mx-auto">
@@ -550,17 +550,18 @@
 						<ol style="margin-left: 30px;">
 							<li>1. Generate your prediction output for the dev set.</li>
 							<li>2. Run the official evaluation methodologies found in the task specific git repo and verify your systems are running as expected.</li>
-							<li>3. Generate your prediction output for the test set and submit the following information by <script type="text/javascript">gen_mail_to_link('codexglue','microsoft.com','CodeXGLUE Feedback','email us');</script>.</li>
+							<li>3. Generate your prediction output for the test set.</li>
+							<li>4. Submit the following information by emailing to <b>codexglue@microsoft.com</b> </li>
 						</ol>
 						<p>Your email should include:</p>
 						<ol style="margin-left: 30px;">
-							<li>1. Prediction results on test set. [Required]</li>
-							<li>2. Prediction results on dev set. [Recommended]</li>
-							<li>3. Individual/Team Name: Name of the individual or the team to appear in the leaderboard. [Required]</li>
-							<li>4. Individual/Team Institution: Name of the institution of the individual or the team to appear in the leaderboard. [Optional]</li>
-							<li>5. Model code: Training code for the model. [Recommended]</li>
-							<li>6. Model information: Name of the model/technique to appear in the leaderboard. [Required]</li>
-							<li>7. Paper Information: Name, Citation, URL of the paper if model is from a published work to appear in the leaderboard. [Optional]</li>
+							<li>1. Prediction results on test set. <b>[Required]</b></li>
+							<li>2. Prediction results on dev set. <b>[Recommended]</b></li>
+							<li>3. Individual/Team Name: Name of the individual or the team to appear in the leaderboard. <b>[Required]</b></li>
+							<li>4. Individual/Team Institution: Name of the institution of the individual or the team to appear in the leaderboard. <b>[Optional]</b></li>
+							<li>5. Model code: Training code for the model. <b>[Recommended]</b></li>
+							<li>6. Model information: Name of the model/technique to appear in the leaderboard. <b>[Required]</b></li>
+							<li>7. Paper Information: Name, Citation, URL of the paper if model is from a published work to appear in the leaderboard. <b>[Optional]</b></li>
 						</ol>
 						<p>To avoid "P-hacking" we discourage too many submissions from the same group in a short period of time.</p>
            	 		</div>
