--- a/index.html
+++ b/index.html
@@ -592,11 +592,35 @@
 						<p></p>
 						<p>To cite CodeXGLUE: </p>
 						<div style="overflow-x:scroll; white-space: nowrap">
-						<code>@article{CodeXGLUE,<br>
-							&nbsp;&nbsp;title={CodeXGLUE: An Open Challenge for Code Intelligence},<br>
-							&nbsp;&nbsp;journal={arXiv},<br>
-							&nbsp;&nbsp;year={2020},<br>
-}</code><br>
+						<code>@article{DBLP:journals/corr/abs-2102-04664,<br>
+							&nbsp;&nbsp;author    = {Shuai Lu and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Daya Guo and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Shuo Ren and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Junjie Huang and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Alexey Svyatkovskiy and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Ambrosio Blanco and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Colin B. Clement and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Dawn Drain and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Daxin Jiang and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Duyu Tang and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Ge Li and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Lidong Zhou and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Linjun Shou and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Long Zhou and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Michele Tufano and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Ming Gong and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Ming Zhou and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Nan Duan and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Neel Sundaresan and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Shao Kun Deng and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Shengyu Fu and<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;Shujie Liu},<br>
+							&nbsp;&nbsp;title     = {CodeXGLUE: {A} Machine Learning Benchmark Dataset for Code Understanding<br>
+							&nbsp;&nbsp;&nbsp;&nbsp;and Generation},<br>
+							&nbsp;&nbsp;journal   = {CoRR},<br>
+							&nbsp;&nbsp;volume    = {abs/2102.04664},<br>
+							&nbsp;&nbsp;year      = {2021}<br>
+						  }</code><br>
 						
 						</div>
 						<p></p>
