--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 										,{field: 'Precision', title: 'Precision', width: 140, sort: true}
 										,{field: 'Recall', title: 'Recall', width: 140, sort: true}
 										,{field: 'F1', title: 'F1', width: 140, sort: true}
-										,{field: 'MAP(%)', title: 'MAP(%)', width: 150, sort: true}
+										,{field: 'MAP@R(%)', title: 'MAP@R(%)', width: 150, sort: true}
 									]]
 								});
 							});
